# face-detection-onnx

./: .gitignore  README.md  pyproject.toml  setup.cfg
fdlite/: exif.py  face_detection.py  face_landmark.py  iris_landmark.py  nms.py  render.py  transform.py  types.py
fdlite/data/: face_detection_back.onnx  face_detection_front.onnx  face_detection_full_range.onnx  iris_landmark.onnx
fdlite/examples/: iris_recoloring.py
