[tool.poetry]
name = "face-detection-onnx"
version = "0.1.3"
description = "A Python port of Google MediaPipe Face Detection modules running in ONNX"
authors = ["Patrick Levin <vertical-pink@protonmail.com>", "Seppe De Langhe <seppe.delanghe@intelliprove.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/seppe-intelliprove/face-detection-onnx"
repository = "https://github.com/seppe-intelliprove/face-detection-onnx"
keywords = ["AI", "face-detection", "onnx", "face-landmarks", "iris-detection", "face-mesh"]
packages = [
	{ include = "fdlite" }
]

[tool.poetry.dependencies]
python = ">=3.8"
onnxruntime = ">=1.15"
Pillow = ">=10.3.0"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = [
    ".eggs",
    ".git",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff]
exclude = [ ".lock", ".toml", ".md", "__init__.py", ".venv", ".git",]
force-exclude = true
line-length = 140
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [ "E4", "E7", "E9", "F",]
ignore = []

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = false
line-ending = "auto"

